Fixed spacings. Forgot to commit this file
SRFCMSAL-2501

--- a/source/_patterns/10-atoms/buttons/button.scss
+++ b/source/_patterns/10-atoms/buttons/button.scss
@@ -278,7 +278,7 @@ $button-animation-duration: .3s;
 
 .button--small-font {
   @include fontSize(14);
-  padding: 13px 14px;
+  padding: 12px 14px;
 }
 
 .button-wrapper--svg-icon {
